# ag2_project_creator_skill

./: .gitignore  README.md  SKILL.md
commands/: ag2-a2a.md  ag2-agent.md  ag2-code-executor.md  ag2-debug.md  ag2-groupchat.md  ag2-mcp.md  ag2-tool.md  ag2-ui.md  ag2-workflow.md
templates/: .env.example  README.md  main.py  pyproject.toml
templates/agents/: example_agent.py
templates/config/: instrumentation.py  llm.py
templates/mcp_servers/: example_server.py
