[project]
name = "ag2-project"
version = "0.1.0"
description = "A multi-agent system built with AG2"
readme = "README.md"
requires-python = ">=3.10, <3.14"
dependencies = [
    "ag2[openai,mcp,ag-ui,tracing]>=0.11",
    "python-dotenv",
    "pydantic",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
